[package]
name = "nulld"
version = "0.1.0"
edition = "2024"

[dependencies]
null-drift-core = { path = "../null-drift-core" }
axum = "0.7"
tokio = { version = "1.0", features = ["full", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
bincode = "1.3"
thiserror = "1.0"
ndarray = { version = "0.17.2", features = ["serde"] }
