[package]
name = "nulld"
version = "0.1.0"
edition = "2024"

[dependencies]
null-drift-core = { path = "../null-drift-core" }
axum = "0.8"
tokio = { version = "1.0", features = ["full", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "2.0"
ndarray = { version = "0.17.2", features = ["serde"] }
